--- a/index.html
+++ b/index.html
@@ -36,20 +36,21 @@
   .forecast-card { margin-top: 20px; text-align: center; } .forecast-card .title { font-size: 1.2rem; font-weight: 500; margin-bottom: 10px; } .forecast-card .result { font-size: 1.5rem; font-weight: 600; padding: 10px; border-radius: 8px; }
   .forecast-card.positive .result { color: var(--success-color); background: var(--success-bg-color); } .forecast-card.negative .result { color: var(--neutral-color); background: var(--neutral-bg-color); }
   #hourly-section h2 { text-align: center; margin-top: 0; font-weight: 500; }
-  #hourly-forecast-list { max-height: 380px; overflow-y: auto; padding-right: 10px; }
+  .hourly-header { display: grid; grid-template-columns: 60px 1fr 1fr 1fr; gap: 15px; padding-bottom: 10px; margin-bottom: 5px; border-bottom: 2px solid var(--border-color); font-weight: 600; color: var(--text-muted-color); }
+  .hourly-header .stat-header { display: flex; align-items: center; gap: 8px; } /* 新增 */
+  #hourly-forecast-list { max-height: 350px; overflow-y: auto; padding-right: 10px; }
   .hour-item { display: grid; grid-template-columns: 60px 1fr 1fr 1fr; gap: 15px; align-items: center; padding: 12px 0; border-bottom: 1px solid var(--border-color); }
-  .hour-item:last-child { border-bottom: none; } .hour-item .time { font-weight: 600; font-size: 1.1rem; } .hour-item .stat { display: flex; align-items: center; gap: 5px; font-size: 0.95rem; }
+  .hour-item:last-child { border-bottom: none; } .hour-item .time { font-weight: 600; font-size: 1.1rem; }
+  .hour-item .stat { display: flex; align-items: center; gap: 8px; font-size: 0.95rem; }
+  .hour-item .stat .icon { font-size: 1.1rem; }
   #sos-button { display: block; width: 100%; padding: 15px; margin-top: 20px; font-size: 1.2rem; font-weight: 600; color: white; background-color: var(--error-color); border: none; border-radius: 8px; cursor: pointer; transition: transform 0.2s; }
   #sos-button:hover { transform: scale(1.02); }
-  /* SOS Modal Styles */
   .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.8); display: none; justify-content: center; align-items: center; z-index: 1000; animation: fadeIn 0.3s; }
   .modal-content { background: #fff; color: #333; padding: 30px; border-radius: 16px; text-align: center; max-width: 90%; width: 500px; box-shadow: 0 0 50px rgba(255,0,0,0.5); }
   .modal-content h2 { color: var(--error-color); font-size: 2.5rem; margin-top: 0; }
   #sos-info { font-size: 1.2rem; font-weight: 600; margin: 20px 0; line-height: 1.6; background: #f0f0f0; padding: 15px; border-radius: 8px; text-align: left; white-space: pre-wrap; }
   .modal-button { display: inline-block; padding: 12px 25px; margin: 10px; font-size: 1.1rem; border-radius: 8px; border: none; cursor: pointer; text-decoration: none; }
   #prepare-sos-btn { background-color: var(--error-color); color: white; width: 80%; }
-  #sos-actions a { margin-top: 10px; }
-  #copy-sos-btn { background-color: var(--accent-color); color: white; }
   #close-sos-btn { background-color: #ccc; color: #333; }
 </style>
 </head>
@@ -75,6 +76,12 @@
     <section id="right-panel" class="card">
       <div id="hourly-section">
         <h2>逐小时预报</h2>
+        <div class="hourly-header">
+          <div>时间</div>
+          <div class="stat-header"><span>🌡️</span><span>温度</span></div>
+          <div class="stat-header"><span>🌫️</span><span>云底高度</span></div>
+          <div class="stat-header"><span>💦</span><span>降水概率</span></div>
+        </div>
         <div id="hourly-forecast-list"></div>
       </div>
       <button id="sos-button" onclick="showSosModal()">🆘 SOS 紧急求救</button>
@@ -145,75 +152,36 @@ function updateDisplay(data) {
         const time = new Date(hourly.time[hourIndex]).toLocaleTimeString('zh-CN', { hour: '2-digit', minute: '2-digit', hour12: false });
         const temp = hourly.temperature_2m[hourIndex] || 0; const precipProb = hourly.precipitation_probability[hourIndex] || 0;
         const hum = hourly.relative_humidity_2m[hourIndex] || 0; const base = Math.round((temp - ((100-hum)/5)) * 125);
-        hourlyHtml += `<div class="hour-item"><div class="time">${time}</div><div class="stat"><span>🌡️</span>${temp.toFixed(1)}°C</div><div class="stat"><span>🌫️</span>${base} m</div><div class="stat"><span>💧</span>${precipProb}%</div></div>`;
+        // --- 修复点：更新了降水图标 ---
+        hourlyHtml += `
+            <div class="hour-item">
+                <div class="time">${time}</div>
+                <div class="stat"><span class="icon">🌡️</span>${temp.toFixed(1)}°C</div>
+                <div class="stat"><span class="icon">🌫️</span>${base} m</div>
+                <div class="stat"><span class="icon">💦</span>${precipProb}%</div>
+            </div>
+        `;
     }
     getEl('hourly-forecast-list').innerHTML = hourlyHtml || '<div class="loading">暂无逐小时数据</div>';
 }
 
-// --- SOS功能 V2.0 ---
+// --- SOS功能 ---
 const sosModal = getEl('sos-modal');
-function resetSosModal() {
-    getEl('sos-title').innerText = '紧急求救';
-    getEl('sos-instruction').style.display = 'block';
-    getEl('sos-instruction').innerText = '点击下方按钮，准备生成包含您当前位置的求救信息。';
-    getEl('prepare-sos-btn').style.display = 'block';
-    getEl('sos-info-container').style.display = 'none';
-    getEl('sos-info').innerText = '';
-    getEl('sos-actions').innerHTML = '';
-}
-function showSosModal() {
-    resetSosModal();
-    sosModal.style.display = 'flex';
-}
+function resetSosModal() { getEl('sos-title').innerText = '紧急求救'; getEl('sos-instruction').style.display = 'block'; getEl('sos-instruction').innerText = '点击下方按钮，准备生成包含您当前位置的求救信息。'; getEl('prepare-sos-btn').style.display = 'block'; getEl('sos-info-container').style.display = 'none'; getEl('sos-info').innerText = ''; getEl('sos-actions').innerHTML = '';}
+function showSosModal() { resetSosModal(); sosModal.style.display = 'flex';}
 getEl('prepare-sos-btn').onclick = function() {
     this.style.display = 'none';
     getEl('sos-instruction').innerText = '正在获取您的GPS位置，请稍候...';
     navigator.geolocation.getCurrentPosition(async (pos) => {
         const sosLat = pos.coords.latitude, sosLon = pos.coords.longitude;
         const sosTime = new Date().toLocaleString('zh-CN');
-        const [sosElevation, locationName] = await Promise.all([
-            getRealElevation(sosLat, sosLon),
-            (async () => {
-                try {
-                    const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${sosLat}&lon=${sosLon}&accept-language=zh-CN`);
-                    return (await res.json()).display_name || 'N/A (离线)';
-                } catch (e) { return 'N/A (离线)'; }
-            })()
-        ]);
-        
-        const sosText = `
-紧急求救 (SOS)
---------------------
-📍 位置描述:
-${locationName}
---------------------
-🛰️ 精确坐标:
-纬度: ${sosLat.toFixed(6)}
-经度: ${sosLon.toFixed(6)}
---------------------
-⛰️ 海拔高度: ${sosElevation} 米
---------------------
-🕒 时间: ${sosTime}
-        `.trim();
-
-        getEl('sos-instruction').style.display = 'none';
-        getEl('sos-info').innerText = sosText;
-        getEl('sos-info-container').style.display = 'block';
-        
+        const [sosElevation, locationName] = await Promise.all([ getRealElevation(sosLat, sosLon), (async () => { try { const res = await fetch(`https://nominatim.openstreetmap.org/reverse?format=json&lat=${sosLat}&lon=${sosLon}&accept-language=zh-CN`); return (await res.json()).display_name || 'N/A (离线)'; } catch (e) { return 'N/A (离线)'; } })() ]);
+        const sosText = `紧急求救 (SOS)\n--------------------\n📍 位置描述:\n${locationName}\n--------------------\n🛰️ 精确坐标:\n纬度: ${sosLat.toFixed(6)}\n经度: ${sosLon.toFixed(6)}\n--------------------\n⛰️ 海拔高度: ${sosElevation} 米\n--------------------\n🕒 时间: ${sosTime}`.trim();
+        getEl('sos-instruction').style.display = 'none'; getEl('sos-info').innerText = sosText; getEl('sos-info-container').style.display = 'block';
         const encodedText = encodeURIComponent(sosText);
-        getEl('sos-actions').innerHTML = `
-            <a href="sms:?body=${encodedText}" class="modal-button" style="background-color: var(--success-color); color: white;">通过短信发送</a>
-            <a href="mailto:?subject=紧急求救 (SOS)&body=${encodedText}" class="modal-button" style="background-color: var(--accent-color); color: white;">通过邮件发送</a>
-            <button id="copy-sos-btn" class="modal-button" style="background-color: #6c757d; color: white;">复制文本</button>
-        `;
-
-        getEl('copy-sos-btn').onclick = () => {
-            navigator.clipboard.writeText(sosText).then(() => alert('求救信息已复制！'), () => alert('复制失败！'));
-        };
-
-    }, (err) => {
-        getEl('sos-instruction').innerText = `GPS定位失败！\n错误: ${err.message}\n请移到开阔地带，或检查手机定位权限。`;
-    }, { enableHighAccuracy: true, timeout: 20000, maximumAge: 0 });
+        getEl('sos-actions').innerHTML = `<a href="sms:?body=${encodedText}" class="modal-button" style="background-color: var(--success-color); color: white;">通过短信发送</a><a href="mailto:?subject=紧急求救 (SOS)&body=${encodedText}" class="modal-button" style="background-color: var(--accent-color); color: white;">通过邮件发送</a><button id="copy-sos-btn" class="modal-button" style="background-color: #6c757d; color: white;">复制文本</button>`;
+        getEl('copy-sos-btn').onclick = () => { navigator.clipboard.writeText(sosText).then(() => alert('求救信息已复制！'), () => alert('复制失败！')); };
+    }, (err) => { getEl('sos-instruction').innerText = `GPS定位失败！\n错误: ${err.message}\n请移到开阔地带，或检查手机定位权限。`; }, { enableHighAccuracy: true, timeout: 20000, maximumAge: 0 });
 };
 getEl('close-sos-btn').onclick = () => { sosModal.style.display = 'none'; };
 
