--- a/index.html
+++ b/index.html
@@ -167,27 +167,24 @@ function triggerSearch() {
     }
 }
 
-// 新增：一个全局的回调函数，用于接收来自 App 的地理编码结果
-window.onGeocodeResult = (jsonString, error) => {
+window.onGeocodeResult = (data, error) => {
     if (error) {
         console.error("[诊断] 原生 OkHttp 请求失败:", error);
         alert(`地址查询失败: ${error}`);
         updateDisplay(lastWeatherData);
         return;
     }
-    if (jsonString) {
-        console.log("[诊断] 从原生 App 成功接收到地理编码 JSON 字符串");
+    if (data) {
+        console.log("[诊断] 从原生 App 成功接收到地理编码对象");
         try {
-            const data = JSON.parse(jsonString);
             handleGeocodeData(data);
         } catch (e) {
-            console.error("[诊断] 解析原生返回的 JSON 失败:", e);
+            console.error("[诊断] 解析原生返回的 geocode 数据失败:", e);
             alert("解析地理编码数据失败");
             updateDisplay(lastWeatherData);
         }
     }
 };
-
 // 【最终版】函数 B: 这是 Web 环境下使用的 fetch 版本
 // 我们将它切换到 Open-Meteo Geocoding API
 async function doSearchWithFetch(address) {
